asset fixes and UI styling to accommodate portrait sizing shifts

--- a/styles.css
+++ b/styles.css
@@ -189,11 +189,12 @@ button {
 .main-ui-wrapper {
     display: flex;
     padding: 6rem 0;
+    max-width: 1920px;
 }
 
 .role-banners-wrapper {
     display: flex;
-    gap: 1.5rem;
+    /* gap: 1.5rem; */
     justify-content: space-between;
     align-content: center;
     width: 100%;
@@ -207,11 +208,13 @@ button {
     justify-content: space-between;
     align-items: center;
     width: 100%;
+    max-width: 240px;
     min-height: 720px;
     background-image: url('img/banner-body-active 2.png');
     background-size: contain;
     background-repeat: no-repeat, no-repeat;
     background-position: top;
+    padding: 32px;
 }
 
 .menu-btns-wrapper {
@@ -254,9 +257,8 @@ button {
 }
 
 .champPortrait {
-    border-style: solid;
-    border: 2px;
-    border-color: black;
+    max-width: 290px;
+    margin: 1rem 0;
 }
 
 .champ-name {
